SERVER-7719: fix argument handling in js insert() method